# elyria-consciousness-boundary-engine

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: counterfactual.py  engine.py  main.py  models.py  prove.py  receipts.py  replay.py
docs/: CLIENT_DEMO_SCRIPT.md  COUNTERFACTUAL_FORMATION_EXCLUSION.md  DIMENSIONAL_BINDING_MODEL.md  PROOF_STATUS.md  REPLAY_AND_TAMPER.md  sample_proof_output.txt
examples/: bind_identity_valid.json  bind_memory_valid.json  halt_coherence_failure.json  observe_unbound_state.json  quarantine_contaminated.json  rebound_broken_chain.json  refuse_self_no_standing.json
