[project]
name = "elyria-consciousness-boundary-engine"
version = "0.1.0"
description = "Public proof surface for governed memory, identity, self-reference, agency posture, continuity, receipts, and replay in AI systems."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
